# DigiByte-Q-ID-

./: LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
contracts/: api_surface_v0_1.json  manifest_v0_1.json
docs/: qid-adamantine-integration.md  qid-api-server.md  qid-examples.md  qid-spec.md  qid-threat-model.md  qid-vision.md
examples/: login_roundtrip.py
qid/: __init__.py  binding.py  crypto.py  hybrid_key_container.py  models.py  pqc_backends.py  pqc_verify.py  protocol.py  qr_payloads.py  uri_scheme.py
tests/: test_api_surface_contract_v0_1.py  test_binding_schema_negative.py  test_binding_validation_edges.py  test_contract_manifest_v0_1.py  test_coverage_boost_fail_closed_no_oqs.py  test_coverage_boost_no_risk_pqc_units.py  test_coverage_boost_pqc_more.py  test_coverage_boost_pqc_more2.py  test_coverage_boost_pqc_verify_smoke.py  test_coverage_bump.py  test_coverage_last_mile.py  test_crypto.py  test_crypto_and_container_coverage.py  test_crypto_coverage_extra.py  test_crypto_last_push.py  test_crypto_negative.py  test_crypto_real_backend_edges.py  test_crypto_real_backend_paths.py  test_crypto_stub_coverage.py  test_dual_proof_login_real_liboqs_optional.py  test_models.py  test_placeholders_and_negative_paths.py  test_policies.py  test_pqc_backend_scaffold.py  test_pqc_backends.py  test_pqc_backends_cover_last_lines.py  test_pqc_backends_coverage_extra.py  test_pqc_backends_last_2_lines.py  test_pqc_backends_negative.py  test_pqc_real_liboqs_optional.py  test_pqc_verify_coverage.py  test_pqc_verify_fail_closed.py  test_pqc_verify_last_push.py  (+11 more)
(+22 files in other folders)
