[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digibyte-q-id"
version = "0.1.0"
description = "DigiByte Q-ID: post-quantum-ready identity protocol (Digi-ID upgrade path)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "DarekDGB" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
pqc = [
  "liboqs-python",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["qid"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.setuptools.packages.find]
include = ["qid*"]
